WLNP-12183 : Remove Custom Work Around